Starting to build the structure for storing tournaments and rounds

--- a/lib/robot_tournament/web_ui/home_page.mustache
+++ b/lib/robot_tournament/web_ui/home_page.mustache
@@ -4,6 +4,7 @@
   <body>
     {{#tournament}}
       <h1>Tournament in Progress: "{{name}}"</h1>
+      <p>Next round begins in {{duration_until_next_round}}</p>
       <h1>Players:</h1>
       <ul>
       {{#players}}
