Start adding players to a tournament

--- a/lib/robot_tournament/web_ui/home_page.mustache
+++ b/lib/robot_tournament/web_ui/home_page.mustache
@@ -10,6 +10,9 @@
       {{#players}}
         <li>{{name}}</li>
       {{/players}}
+      {{^players}}
+        <li>There are no players registered</li>
+      {{/players}}
       </ul>
     {{/tournament}}
     {{^tournament}}
