Very very basic tournament seems to be working, showing winner

--- a/lib/robot_tournament/web_ui/home_page.mustache
+++ b/lib/robot_tournament/web_ui/home_page.mustache
@@ -5,6 +5,7 @@
     {{#tournament}}
       <h1>Tournament in Progress: "{{name}}"</h1>
       <p>Next round begins in {{duration_until_next_round}}</p>
+      <p>Current winner: {{winner}}</p>
       
       <h2>Players registered:</h2>
       <ul>
