Add feature to show the results for a specific player

--- a/lib/robot_tournament/web_ui/help_page.mustache
+++ b/lib/robot_tournament/web_ui/help_page.mustache
@@ -56,7 +56,7 @@
     </p>
     <p>The UNIX command <a href="http://curl.haxx.se/download.html">curl</a> is a handy tool for uploading your player. Use a command something like this:</p>
     <pre>
-      curl {{upload_path}} --data-binary @my-player.zip
+      curl {{upload_path}} --data-binary @path/to/my-player.zip
     </pre>
     
     <h2>Player Content & Structure</h2>
