--- a/lib/robot_tournament/web_ui/home_page.mustache
+++ b/lib/robot_tournament/web_ui/home_page.mustache
@@ -128,27 +128,12 @@
       {{#finished_rounds?}}
         <hr/>
         <h2>Finished Rounds</h2>
-      {{/finished_rounds?}}
-      {{#finished_rounds}}
-        <h2 class="finished round">{{name}}</h2>
-        <h3>Players</h3>
         <ul>
-        {{#players}}
-          <li>{{name}}</li>
-        {{/players}}
+        {{#finished_rounds}}
+          <li class="finished round"><a href="/rounds/{{number}}">{{name}}</a></li>
+        {{/finished_rounds}}
         </ul>
-        <h3>Results</h3>
-        {{#results}}
-          <div class="match" />
-            <h4>{{player1}} vs {{player2}}</h4>
-            <pre>{{output}}</pre>
-            <div>Result: 
-            {{#winner}}<span class="winner">{{winner}} wins{{/winner}}
-            {{^winner}}Draw{{/winner}}
-            </div>
-          </div>
-        {{/results}}
-      {{/finished_rounds}}
+      {{/finished_rounds?}}
     {{/tournament}}
     {{^tournament}}
       <p>There is currently no tournament. Why not ask someone to kick one off?</p>
