--- a/lib/robot_tournament/web_ui/home_page.mustache
+++ b/lib/robot_tournament/web_ui/home_page.mustache
@@ -48,7 +48,7 @@
     </style>
     <script 
       type="text/javascript"
-      src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js">
+      src="js/jquery.min.js">
     </script>
     <script type = "text/javascript">
       $(document).ready(function()
