Tweaks output to scroll within the pre block

--- a/lib/robot_tournament/web_ui/player_page.mustache
+++ b/lib/robot_tournament/web_ui/player_page.mustache
@@ -45,6 +45,11 @@
         background-color: #eec;
         padding: 2px;
       }
+
+      pre {
+        height: 500px;
+        overflow: auto;
+      }
     </style>
   </head>
   <body>
